--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,14 @@ click==8.0.3
 cryptography==36.0.1
 Flask==2.0.2
 Flask-MySQL==1.5.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+psycopg2-binary==2.9.3
 pycparser==2.21
 PyMySQL==1.0.2
+SQLAlchemy==1.4.31
 Werkzeug==2.0.2
